@@ -19,7 +19,7 @@ public class MessageConfiguration {
         String serializerType = applicationConfiguration.getSerializer().getType();
         String packageName = "org.apache.bigtop.manager.common.message.serializer";
         String className = packageName + "." + StringUtils.capitalize(serializerType) + "MessageSerializer";
-        return (MessageSerializer) Class.forName(className).newInstance();
+        return (MessageSerializer) Class.forName(className).getDeclaredConstructor().newInstance();
     }
 
     @Bean
@@ -27,6 +27,6 @@ public class MessageConfiguration {
         String deserializerType = applicationConfiguration.getSerializer().getType();
         String packageName = "org.apache.bigtop.manager.common.message.serializer";
         String className = packageName + "." + StringUtils.capitalize(deserializerType) + "MessageDeserializer";
-        return (MessageDeserializer) Class.forName(className).newInstance();
+        return (MessageDeserializer) Class.forName(className).getDeclaredConstructor().newInstance();
     }
 }
